--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,3 +27,5 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = [ "derive" ] }
 serde_json = "1"
 tauri-plugin-dialog = "2.0.0"
+whoami = "1.5.2"
+tauri-plugin-sql = { version = "2", features = ["sqlite"] }
