--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   "dependencies": {
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2.2.0",
+    "@tauri-apps/plugin-fs": "~2",
     "@tauri-apps/plugin-opener": "^2",
-    "vue": "^3.5.13"
+    "@types/markdown-it": "^14.1.2",
+    "highlight.js": "^11.11.1",
+    "vue": "^3.5.13",
+    "vue-markdown-render": "^2.2.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.14.0",
