--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,9 +23,9 @@ tauri-build = { version = "2", features = [] }
 
 [dependencies]
 tauri = { version = "2", features = [] }
-tauri-plugin-opener = "2"
 serde = { version = "1", features = [ "derive" ] }
 serde_json = "1"
+tauri-plugin-opener = "2"
 tauri-plugin-dialog = "2.0.0"
-whoami = "1.5.2"
-tauri-plugin-sql = { version = "2", features = ["sqlite"] }
+tauri-plugin-fs = "2"
+rusqlite = "0.32.1"
