--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/markdown-it": "^14.1.2",
     "highlight.js": "^11.11.1",
     "vue": "^3.5.13",
+    "vue-i18n": "^11.0.1",
     "vue-markdown-render": "^2.2.1"
   },
   "devDependencies": {
