--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "copilot-challenge",
+  "name": "copilot-chat-helper",
   "type": "module",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a",
   "scripts": {
     "dev": "vite",
@@ -16,7 +16,6 @@
     "@tauri-apps/plugin-dialog": "^2.2.0",
     "@tauri-apps/plugin-fs": "~2",
     "@tauri-apps/plugin-opener": "^2",
-    "@types/markdown-it": "^14.1.2",
     "highlight.js": "^11.11.1",
     "vue": "^3.5.13",
     "vue-i18n": "^11.0.1",
@@ -25,6 +24,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^3.14.0",
     "@tauri-apps/cli": "^2",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.10.7",
     "@vitejs/plugin-vue": "^5.2.1",
     "eslint": "^9.18.0",
